<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_save_path"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_save_path"/>
    <item
        android:id="@+id/menu_reset_blue_gps"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_reset_blue_gps"/>
    <item
        android:id="@+id/menu_random_pos"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_random_pos"/>
    <item
        android:id="@+id/menu_reset_altitude"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_reset_altitude"/>
    <item
        android:id="@+id/menu_load_last_pos"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_load_last_pos"/>
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_logs_screen"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_logs_screen"/>
    <item
        android:id="@+id/menu_map_provider"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_map_provider"
        android:enabled="true">
        <menu>
            <item
                android:id="@+id/menu_provider_osm"
                android:title="@string/provider_osm_title"/>
            <item
                android:id="@+id/menu_provider_google"
                android:title="@string/provider_google_title"/>
        </menu>
    </item>
    <item
        android:id="@+id/menu_download_map"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_download_map"/>

</menu>